@@ -1781,6 +1781,22 @@ WifiRemoteStationManager::AddStationHeCapabilities (Mac48Address from, HeCapabil
   NS_LOG_FUNCTION (this << from << heCapabilities);
   WifiRemoteStationState *state;
   state = LookupState (from);
+  if (heCapabilities.GetChannelWidthSet () & 0x04 && Is5Ghz (m_wifiPhy->GetFrequency ()))
+    {
+      state->m_channelWidth = 160;
+    }
+  else if (heCapabilities.GetChannelWidthSet () & 0x02 && Is5Ghz (m_wifiPhy->GetFrequency ()))
+    {
+      state->m_channelWidth = 80;
+    }
+  else if ((heCapabilities.GetChannelWidthSet () & 0x01) && Is2_4Ghz (m_wifiPhy->GetFrequency ()))
+    {
+      state->m_channelWidth = 40;
+    }
+  else
+    {
+      state->m_channelWidth = 20;
+    }
   if (heCapabilities.GetHeLtfAndGiForHePpdus () >= 2)
     {
       state->m_guardInterval = 800;
